Bug Fixes + Player Death
Bug fixes - out of bounds issues
Program ends when player dies
Player slower when crouching